@@ -1,8 +1,9 @@
 5.2.0:
 - New: AMOLED app theme (only with one static accent color due to internal reasons)
-- Improved: wallpaper design selection thumbnails
 - Improved: default shape scale now based on display size and density
+- Improved: wallpaper design selection thumbnails
 - Improved: hide tilt effect options if device has no acceleration sensor
+- Improved: system bars appearance for older Android versions
 - Fixed: revert a change from last version that probably caused always-dark status bar on some devices (hopefully this was the reason)
 - Fixed: app theme dark mode switching on Android 12
 - Fixed: some crashes and bugs
